update level placement

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -275,9 +275,9 @@ DataValidationSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcut
 GameplayTagsDeveloperSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 LogVisualizerSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,
-CapsuleComponent=
+CapsuleComponent=StaticMeshActor.Rendering.LOD,
 StaticMeshActor=StaticMeshActor.Rendering.LOD,
-Enemy_C=
+Enemy_C=StaticMeshActor.Rendering.LOD,
 EQSTestPawn_C=StaticMeshActor.Rendering.LOD,
 CameraComponent=CameraComponent.PostProcess.Lens
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -418,9 +418,9 @@ CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-CapsuleComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
+CapsuleComponent=
+ShapeComponent=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Gun/Gun_Rifle
@@ -3123,7 +3123,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=SourceControl
+LastLogListing=PIE
 
 [MaterialEditor]
 PrimType=1
@@ -3166,7 +3166,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3253,4 +3253,9 @@ InstalledPlugins=XRVisualization
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
