--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -48,3 +48,11 @@ GraphicsAdapter=0
 AudioInputDevice="{0.0.1.00000000}.{96ba95df-a612-48aa-ab63-073a94d46ace}"
 AudioOutputDevice="{0.0.0.00000000}.{435a787c-d89a-4223-ab25-d8a5be879964}"
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
